# graymatter

./: .gitignore  README.md  compose.yaml
api/: Dockerfile  README.md  pyproject.toml
api/bruno/: collection.bru
api/bruno/chat/: complete.bru  non_streaming.bru
api/bruno/environments/: local.bru
api/bruno/tool_calling/: folder.bru  get_date.bru
api/bruno/tool_calling/get_date/: folder.bru
api/bruno/tool_calling/web_search/: multiple.bru
api/src/graymatter/: config.py  main.py
api/src/graymatter/api/chat/: exceptions.py  router.py  schema.py  service.py  utils.py
api/src/graymatter/tools/: __init__.py  abstract_registry.py  constants.py  exceptions.py  registry.py  utils.py
api/src/graymatter/tools/implementations/: __init__.py  _get_date.py  _web_search.py
backend/: Dockerfile  README.md  Taskfile.yml
backend/bruno/: bruno.json
backend/bruno/chat/: folder.bru  non_streaming.bru  stream.bru
backend/bruno/environments/: local.bru
backend/bruno/tool_calling/get_date/: get_date_complete.bru  get_date_streaming.bru
backend/bruno/tool_calling/web_search/: folder.bru  single.bru
backend/src/graymatter/: main.py
backend/src/graymatter/api/: __init__.py
backend/src/graymatter/api/chat/: exceptions.py  router.py
backend/src/graymatter/tools/: _abstract_registry.py  exceptions.py  tool.py
