[project]
name = "Graymatter"
version = "0.1.0"
description = "The transparent chatbot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "openai>=1.84.0",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "tavily-python>=0.7.7",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
